fix first section spacing for small screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -56,7 +56,6 @@ header h2,
 header h3 {
   margin-bottom: 35px;
 }
-header h2 img,
 header h3 img {
   width: 80%;
 }
